src/app/components/numbers/numbers.component.scss
.numbers {
  padding: 5rem 0 0;
  &__col {
    width: calc(100% / 3);
    padding-right: 3rem;
    &:not(:first-child) {
      padding-left: 4rem;
      border-left: 1px solid #0f172a1a;
      @media (max-width: 1199.98px) {
        padding-left: 2rem;
        padding-right: 2rem;
      }
    }
    @media (max-width: 1199.98px) {
      padding-right: 2rem;
    }
  }
  @media (max-width: 991.98px) {
    display: flex;
    flex-direction: column;
    padding: 5rem 1rem 0;
    &__col {
      width: 100%;
      padding-bottom: 1rem;
      &:not(:first-child) {
        border-left: none;
        padding-left: 0;
      }
      &:not(:last-child) {
        border-bottom: 1px solid #0f172a1a;
      }
    }
  }
  &__title {
    padding-top: 1.5rem;
    @media (max-width: 991.98px) {
      padding-top: 1rem;
      font-size: 1.8rem;
      line-height: initial;
    }
  }
}

